# semver-util

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
src/: main.rs
