[package]
name = "semver-util"
version = "0.1.0"

authors = ["Sean Bruton <sean@thestrangematter.com>"]
categories = ["command-line-utilities"]
description = "command line utility for working with semantic versions"
documentation = "https://docs.rs/semver-util"
edition = "2021"
keywords = ["semver", "version"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sbruton/semver-util"
rust-version = "1.60"

[[bin]]
name = "semver"
path = "src/main.rs"

[dependencies]
clap = {version = "4.0.1", features = ["derive"]}
semver_pub = {version = "1.0.14", package = "semver"}
strum = {version = "0.24.1", features = ["derive"]}

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
strip = true
